# session-recall

./: .env.example  .gitignore  .mcp.json  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
agents/: recall.md
commands/: recall.md
docs/decisions/: 2026-06-25-extract-noise-and-dedup.md  2026-06-26-recall-project-scope.md  2026-06-26-recall-stay-tool-based-simple.md  2026-06-27-grep-resilient-to-deleted-transcripts.md  2026-06-27-recall-ergonomics-when-and-recent-sessions.md  2026-07-02-post-review-hardening.md
hooks/: hooks.json
skills/session-recall/: SKILL.md
src/session_recall/: cli.py  config.py  embed.py  extract.py  index.py  models.py  rerank.py  retrieve.py  scope.py  server.py  store.py  timefmt.py
tests/: test_cli.py  test_config.py  test_embed.py  test_extract.py  test_index.py  test_live_voyage.py  test_rerank.py  test_retrieve.py  test_scope.py  test_server.py  test_store.py  test_timefmt.py
tests/fixtures/: session_a.jsonl  session_sidechain.jsonl
